<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/name_text"
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/englishbreakfast_image"
        style="@style/image_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text"
        android:src="@drawable/englishbreakfast" />

    <TextView
        android:id="@+id/descr"
        style="@style/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/englishbreakfast_image"
        android:text="@string/description" />

    <ImageView
        android:id="@+id/location_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/descr"
        android:layout_margin="10dp"
        android:src="@drawable/icon_address" />

    <ImageView
        android:id="@+id/phone_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/location_image"
        android:layout_margin="10dp"
        android:src="@drawable/phone" />

    <ImageView
        android:id="@+id/website_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/website"
        android:layout_margin="10dp"
        android:src="@drawable/website" />

    <ImageView
        android:id="@+id/hours_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@id/website_image"
        android:layout_margin="10dp"
        android:src="@drawable/clock" />

    <TextView
        android:id="@+id/address"
        style="@style/description_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descr"
        android:layout_toEndOf="@+id/location_image"
        android:layout_toRightOf="@+id/location_image"
        android:padding="13dp"
        android:text="@string/description_address" />

    <TextView
        android:id="@+id/phone"
        style="@style/description_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="@string/description_telephone"
        android:autoLink="phone"
        android:textColorLink="#000"
        android:linksClickable="true"
        android:layout_below="@+id/address"
        android:layout_toRightOf="@+id/phone_image"
        android:layout_toEndOf="@+id/phone_image"
        android:onClick="phone"/>

    <TextView
        android:id="@+id/website"
        style="@style/description_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_toRightOf="@id/website_image"
        android:padding="13dp"
        android:text="@string/description_website"
        android:autoLink="web"
        android:textColorLink="#000"
        android:linksClickable="true"/>

    <TextView
        android:id="@+id/hours"
        style="@style/description_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:text="@string/description_hours"
        android:layout_below="@+id/website"
        android:layout_toRightOf="@+id/hours_image"
        android:layout_toEndOf="@+id/hours_image" />

    <Button
        android:id="@+id/button"
        style="@style/button_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_checkmenu"
        android:onClick="goToMenu"
        android:clickable="true"
        android:autoLink="web"
        android:linksClickable="true"/>

</RelativeLayout>
